# tic_tac_toe_PAMSI

./: CMakeLists.txt
inc/: AI.h  Board.h  MainGame.h  SFMLController.h  SFMLView.h
src/: AI.cpp  Board.cpp  MainGame.cpp  SFMLController.cpp  SFMLView.cpp  main.cpp
